# LayerMatNode

./: CMakeLists.txt  copyFileCMake.cmake
plugin/: LayerMatNode.mtd  la_LambertBSDFTemplate.py
src/: lambert_node.cpp
